2004-11-10 Magnus Hagdorn
 * ncdf_vars.def: make nc files conformant with CF standard (conformance was check with the CF
   checker http://titania.badc.rl.ac.uk/cgi-bin/cf-checker.pl, and passed except for the new
   standard names which are not yet part of CF but will be from 2004-11-15)

2004-09-27 Magnus Hagdorn
 * removed masking of netCDF variables. This causes more pain than it is worth it. The two 
   files are tagged (generate_ncvars.py, ncdf_vars.def)

2004-09-27 Magnus Hagdorn
 * glimmer_temp.f90: applied Tony's fix for floating ice temperature problem
   see http://forge.nesc.ac.uk/pipermail/glimmer-discuss/2004-September/000041.html
	
2004-09-27 Magnus Hagdorn
 * split up main time step into two parts so that we can write data before
   ice thicknesses are updated (glint_timestep.f90, glide_types.f90, simple_glide.f90, eis_glide.f90, glint_timestep.f90)
 * updated doc (glide.dia, glide.eps)
	
2004-09-22 Magnus Hagdorn
 * new continentality calculations (eis_cony.f90, glimmer_searchcircle.f90, eis_forcing.f90
 * eis_ela.f90: distinguish between maritime and continental mass balance
 * eis specific netCDF I/O (eis_io.f90.in, eis_glide.f90, ncdf_vars.def)
 * eis_types.f90: split out type definition to avoid circular dependency
 * Makefile: updated accordingly
	
2004-09-21 Magnus Hagdorn
 * add eus to lower ice boundary calculations (glide_setup.f90, glide.f90, glint_initialise.f90, glint_timestep.f90)
 * glide_mask.f90: eustatic sea level change is considered when calculating mask
 * use glide_mask for finding ice shelf (glide_types.f90, glimmer_temp.f90)
 * glimmer_velo.f90: minor rearrangements which might speed-up code

2004-09-21 Magnus Hagdorn
 * glint_io.f90.in: fix scaling bug of netCDF variables
 * Makefile: added glide_mask.o to test_setup

2004-09-20 Magnus Hagdorn
 * generate_ncvars.py: need to set NF90_FILL_REAL to 0 when reading netCDF files.
	
2004-09-10 Magnus Hagdorn