@@ -1,3 +1,6 @@
+\newcommand{\pd}{\partial}
+\renewcommand{\vec}{\boldsymbol}
+
 \setlength{\oddsidemargin}{1.35cm} %margins set up for psglg1
 \setlength{\evensidemargin}{-0.1cm}
 \setlength{\topmargin}{0cm}
