@@ -11,6 +11,10 @@
 \newcommand{\dir}{ug}
 \input{\dir/ug.tex}
 
+\chapter{Numerics}
+\renewcommand{\dir}{num}
+\input{\dir/num.tex}
+
 \chapter{Developer Guide}
 \renewcommand{\dir}{dg}
 \input{\dir/dg.tex}
