@@ -1,0 +1,15 @@
+\newcommand{\dir}{num}
+
+\pagestyle{myheadings}
+\markright{GLIMMER 0.7 Numerics}
+
+\begin{document}
+\title{GLIMMER 0.7 Numerics}
+\author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk} \and Ian Rutt\thanks{I.C.Rutt@bristol.ac.uk}}
+\maketitle
+\tableofcontents
+\newpage
+
+\input{\dir/num.tex}
+
+\end{document}
