@@ -1,0 +1,206 @@
+\section{Temperature Solver}
+This document summarises what I have learned by staring at the GLIMMER code and reading various papers.
+
+The ice temperature, $T$, evolves according to
+\begin{multline}
+  \label{temp.eq.temp}
+  \frac{\pd T}{\pd t} = \frac{k}{\rho cH^2}\frac{\pd^2T}{\pd\sigma^2} - \vec{U}\cdot\vec\nabla T + \frac{\sigma g}c\frac{\pd \vec{U}}{\pd\sigma}\cdot\vec\nabla s \\
+  + \frac1H\frac{\pd T}{\pd\sigma}\left[w-\frac{\pd s}{\pd t}-\vec{U}\cdot\vec\nabla s+\sigma\left(\frac{\pd H}{\pd t}+\vec{U}\cdot\vec\nabla H\right)\right]
+\end{multline}
+The terms represents (1) vertical diffusion, (2) horizontal advection, (3) internal heat generation due to friction and (4) vertical advection and a correction due to the sigma coordinate system. Let's rewrite \eqref{temp.eq.temp} to introduce some names:
+\begin{equation}
+  \label{temp.eq.temp2}
+  \frac{\pd T}{\pd t} = a\frac{\pd^2T}{\pd\sigma^2} +b(\sigma) + \Phi(\sigma) + c(\sigma)\frac{\pd T}{\pd\sigma},
+\end{equation}
+where
+\begin{subequations}
+  \begin{align}
+    a&=\frac{k}{\rho cH^2} \\
+    \label{temp.eq.hadv}
+    b(\sigma)&=-\vec{U}\cdot\vec\nabla T\\
+    \Phi(\sigma)&=\frac{\sigma g}c\frac{\pd \vec{U}}{\pd\sigma}\cdot\vec\nabla s \\
+    c(\sigma)&=\frac1H\left[w-\frac{\pd s}{\pd t}-\vec{U}\cdot\vec\nabla s+\sigma\left(\frac{\pd H}{\pd t}+\vec{U}\cdot\vec\nabla H\right)\right]
+  \end{align}
+\end{subequations}
+
+The horizontal velocity in $x$ direction is given by:
+\begin{equation}
+  \label{temp.eq.horiz_velo}
+  u_x(\sigma) = -2(\rho g)^nH^{n+1}|\vec\nabla s|^{n-1}\frac{\pd s}{\pd x}\int_1^\sigma A(T^\ast)\sigma^nd\sigma+u_x(1)
+\end{equation}
+The equation for the $y$--velocity, $u_y$ is similar.
+
+\subsection{Vertical Diffusion}
+Discretisation of $\pd^2T/\pd\sigma^2$ is slightly complicated because the vertical grid is irregular. Using Taylor series the central difference formulas are
+\begin{subequations}
+  \begin{align}
+    \label{temp.eq.d1}
+    \left.\frac{\pd T}{\pd\sigma}\right|_{\sigma_{k-1/2}}&=\frac{T_k-T_{k-1}}{\sigma_k-\sigma_{k-1}}\\
+    \intertext{and}
+    \label{temp.eq.d2}
+    \left.\frac{\pd T}{\pd\sigma}\right|_{\sigma_{k+1/2}}&=\frac{T_{k+1}-T_k}{\sigma_{k+1}-\sigma_k}\\
+    \intertext{The second partial derivative is then, also uning central differences:}
+    \label{temp.eq.d3}
+    \left.\frac{\pd^2 T}{\pd\sigma^2}\right|_{\sigma_k} &= \frac{\left.{\pd T}/{\pd\sigma}\right|_{\sigma_{k+1/2}} - \left.{\pd T}/{\pd\sigma}\right|_{\sigma_{k-1/2}}}{1/2\left(\sigma_{k+1}-\sigma_{k-1}\right)}\\
+    \intertext{Inserting \eqref{temp.eq.d1} and \eqref{temp.eq.d2} into \eqref{temp.eq.d3}, we get:}
+    \label{temp.eq.d4}
+    &=\frac{2(T_{k+1}-T_k)}{(\sigma_{k+1}-\sigma_k)(\sigma_{k+1}-\sigma_{k-1})}-\frac{2(T_k-T_{k-1})}{(\sigma_k-\sigma_{k-1})(\sigma_{k+1}-\sigma_{k-1})}
+  \end{align}
+\end{subequations}
+Finally, the terms of equation \eqref{temp.eq.d4} are rearranged:
+\begin{multline}
+  \left.\frac{\pd^2 T}{\pd\sigma^2}\right|_{\sigma_k} = \frac{2T_{k-1}}{(\sigma_k-\sigma_{k-1})(\sigma_{k+1}-\sigma_{k-1})} - \frac{2T_k}{(\sigma_{k+1}-\sigma_k)(\sigma_k-\sigma_{k-1})}\\
+  + \frac{2T_{k+1}}{(\sigma_{k+1}-\sigma_k)(\sigma_{k+1}-\sigma_{k-1})}
+\end{multline}
+
+\subsection{Horizontal Advection}
+The horizontal advection term, $- \vec{U}\cdot\vec\nabla T$ is solved using an upwinding scheme. Let's start with the 1--dimensional case. The method discussed can be straightforwadly extented to 2D. As always, the temperature function is expressed as a Taylor series.
+\begin{subequations}
+  \begin{align}
+    \label{temp.eq.taylor1}
+    T(x+\Delta x) &=T(x)+\Delta xT'(x)+\frac{\Delta x^2}2T''(x)+\ldots\\
+    \intertext{If we subsitute $\Delta x$ with $2\Delta x$, Equation \eqref{temp.eq.taylor1}}
+    \label{temp.eq.taylor2}
+    T(x+2\Delta x) &=T(x)+2\Delta xT'(x)+2\Delta x^2T''(x)+\ldots
+  \end{align}
+\end{subequations}
+From \eqref{temp.eq.taylor1} and \eqref{temp.eq.taylor2} we can construct a difference formula where the $\mathcal{O}(\Delta x^2)$ error is cancelled, by multiplying \eqref{temp.eq.taylor1} with 4 and substracting the result from \eqref{temp.eq.taylor2}:
+\begin{subequations}
+  \begin{align}
+    \label{temp.eq.forward_h3}
+    T_+'(x)&=\frac{4T(x+\Delta x)-T(x+2\Delta x)-3T(x)}{2\Delta x}\\
+    \intertext{and similarly for the backward difference:}
+    T_-'(x)&=-\frac{4T(x-\Delta x)-T(x-2\Delta x)-3T(x)}{2\Delta x}
+    \end{align}
+\end{subequations}
+So the horizontal advection term in one dimensions becomes:
+\begin{equation}
+  b_x = -u_x\frac{\pd T}{\pd x}=\frac{-u_x}{2\Delta x}
+  \begin{cases}
+    -(4T_{i-1}-T_{i-2}-3T_i) & \text{when $u_x>0$} \\
+    4T_{i+1}-T_{i+2}-3T_i & \text{when $u_x<0$} \\
+  \end{cases}
+\end{equation}
+A similar expression is found for $b_y$ by simply substituting $y$ for $x$. Finally, the combined horizontal advection term, is simply
+\begin{equation}
+  b=-\vec{U}\cdot\vec\nabla T=-\left(u_x\frac{\pd T}{\pd x}+u_y\frac{\pd T}{\pd y}\right)=b_x+b_y=b_1+b_2T_i
+\end{equation}
+
+\subsection{Heat Generation}
+Taking the derivative of \eqref{temp.eq.horiz_velo} with respect to $\sigma$, we get
+\begin{equation}
+  \frac{\pd u_x}{\pd\sigma} = -2(\rho g)^nH^{n+1}|\vec\nabla s|^{n-1}\frac{\pd s}{\pd x}A(T^\ast)\sigma^n
+\end{equation}
+Thus,
+\begin{equation}
+\begin{split}
+  \Phi(\sigma) &= \frac{\sigma g}c\frac{\pd \vec{U}}{\pd\sigma}\cdot\vec\nabla s  = \frac{\sigma g}c\left(\frac{\pd u_x}{\pd \sigma}\frac{\pd s}{\pd x} + \frac{\pd u_y}{\pd \sigma}\frac{\pd s}{\pd y}\right)\\
+       &= -2(\rho g)^nH^{n+1}|\vec\nabla s|^{n-1}\frac{\sigma g}cA(T^\ast)\sigma^n \left(\left(\frac{\pd s}{\pd x}\right)^2+\left(\frac{\pd s}{\pd y}\right)^2\right) \\
+       &= -\frac2{c\rho}(g\sigma\rho)^{n+1}\left(H|\vec\nabla s|\right)^{n+1}A(T^\ast)
+\end{split}  
+\end{equation}
+
+The constant factor $\frac2{c\rho}(g\sigma\rho)^{n+1}$ is calculated during initialisation in the subroutine \texttt{init\_temp}. This factor is assigned to array \texttt{c1(1:upn)}. \texttt{c1} also includes various scaling factors and the factor $1/16$ to normalise $\bar{A}$.
+
+The next factor, $\left(H|\vec\nabla s|\right)^{n+1}$ is calculated in the subroutine \texttt{finddisp}:
+\begin{equation}
+  {c_2}_{i,j} = \left(\tilde{H}_{i,j}\sqrt{\tilde{S_x}_{i,j}^2+\tilde{S_y}_{i,j}^2}\right)^{n+1},
+\end{equation}
+where
+\begin{equation}
+  \tilde{F}_{i,j}=\frac{F^\ast_{i-1/2,j}+F^\ast_{i+1/2,j}+F^\ast_{i,j-1/2}+F^\ast_{i,j+1/2}}4
+\end{equation}
+and $F^\ast$ denotes a quantity in the velocity grid.
+
+The final factor is found by averaging over the neighbouring nodes:
+\begin{equation}
+  \bar{A}_{i,j}=4A_{i,j}+2(A_{i-1,j}+A_{i+1,j}+A_{i,j-1}+A_{i,j+1})+(A_{i-1,j-1}+A_{i+1,j-1}+A_{i+1,j+1}+A_{i-1,j+1})
+\end{equation}
+
+\subsection{Vertical Advection}
+The vertical advection term, $\pd T/\pd\sigma$ is solved using the central difference formula for unevenly spaced nodes:
+\begin{equation}
+  \frac{\pd T}{\pd\sigma}=\frac{T_{k+1}-T_{k-1}}{\sigma_{k+1}-\sigma_{k-1}}
+\end{equation}
+
+\subsection{Boundary Conditions}
+At the upper boundary, ice temperatures are set to the surface temperature, $T_{\text{surf}}$. At the ice base, the boundary condition depends on whether the base is melting or not:
+\begin{subequations}
+  \begin{align}
+    T(1) &= T_{\text{pmp}} \quad\text{if $T(1)\ge T_{\text{pmp}}$}\\
+    \left.\frac{\pd T}{\pd\sigma}\right|_{\sigma=1}&=-\frac{GH}k \quad\text{if $T(1)<T_{\text{pmp}}$}\\
+    \intertext{If the ice is floating, basal temperatures are kept constant, i.e. }
+    \frac{\pd T(1)}{\pd t} & = 0
+  \end{align}
+\end{subequations}
+When the ice is floating, basal temperatures are hold constant.
+
+\subsection{Putting it all together}
+Equation \eqref{temp.eq.temp} is solved for each ice column. The horizontal dependency of the horizontal advection term, \eqref{temp.eq.hadv}, is resolved by iterating the vertical solution. Putting the individual terms together using a fully explicit finite differences scheme, Equation \eqref{temp.eq.temp2} becomes
+\begin{subequations}
+  \begin{multline}
+    \label{temp.eq.temp3a}
+    \frac{T_{k,t+1}-T_{k,t}}{\Delta t} = \left(\frac{2aT_{k-1,t}}{(\sigma_k-\sigma_{k-1})(\sigma_{k+1}-\sigma_{k-1})} - \frac{2aT_{k,t}}{(\sigma_{k+1}-\sigma_k)(\sigma_k-\sigma_{k-1,t})}\right. \\
+    \left.+ \frac{2aT_{k+1,t}}{(\sigma_{k+1}-\sigma_k)(\sigma_{k+1}-\sigma_{k-1})}\right)+{b_1}_{k,t}+{b_2}_kT_{k,t}+\Phi_k+c_k\frac{T_{k+1,t}-T_{k-1,t}}{\sigma_{k+1}-\sigma_{k-1}}
+\end{multline}
+and similarly the fully implicit scheme
+  \begin{multline}
+    \label{temp.eq.temp3b}
+    \frac{T_{k,t+1}-T_{k,t}}{\Delta t} = \left(\frac{2aT_{k-1,t+1}}{(\sigma_k-\sigma_{k-1})(\sigma_{k+1}-\sigma_{k-1})} - \frac{2aT_{k,t+1}}{(\sigma_{k+1}-\sigma_k)(\sigma_k-\sigma_{k-1,t+1})}\right. \\
+    \left.+ \frac{2aT_{k+1,t+1}}{(\sigma_{k+1}-\sigma_k)(\sigma_{k+1}-\sigma_{k-1})}\right)+{b_1}_{k,t+1}+{b_2}_kT_{k,t+1}+\Phi_k+c_k\frac{T_{k+1,t+1}-T_{k-1,t+1}}{\sigma_{k+1}-\sigma_{k-1}}
+\end{multline}
+\end{subequations}
+Taking the average of Equations \eqref{temp.eq.temp3a} and \eqref{temp.eq.temp3b} gives the \emph{Crank--Nicholson scheme}. The resulting equation is then rearranged and terms of $T_{k-1,t+1}$, $T_{k,t+1}$ and $T_{k+1,t+1}$ are combined to give the tri--diagonal system
+\begin{equation}
+  \alpha_kT_{k-1,t+1}+\beta_kT_{k,t+1}+\gamma_kT_{k+1,t+1}=\delta_k
+\end{equation}
+where, for $k=2,N-1$
+\begin{subequations}
+  \begin{align}
+    \alpha_k &= -\frac12\frac{2a\Delta t}{(\sigma_k-\sigma_{k-1})(\sigma_{k+1}-\sigma_{k-1})}+\frac12\frac{c_k\Delta t}{\sigma_{k+1}-\sigma_{k-1}} \\
+    \beta_k &= 1+\frac12\frac{2a\Delta t}{(\sigma_{k+1}-\sigma_k)(\sigma_k-\sigma_{k-1})}-\frac12{b_2}_k\Delta t=1-\alpha_k-\gamma_k-\frac12{b_2}_k\Delta t\\
+    \gamma_k &= -\frac12\frac{2a\Delta t}{(\sigma_{k+1}-\sigma_k)(\sigma_{k+1}-\sigma_{k-1})}-\frac12\frac{c_k\Delta t}{\sigma_{k+1}-\sigma_{k-1}} \\
+    \delta_k &= -\alpha_kT_{k-1,t}+(2-\beta_k)T_{k,t}-\gamma_kT_{k+1,t}+\frac12({b_1}_{k,t}+{b_1}_{k,t+1})\Delta t+\Phi_k\Delta t
+  \end{align}
+
+\subsubsection{Boundary Conditions}
+At the upper boundary:
+\begin{equation}
+  \alpha_1=0,\quad\beta_1=1,\quad\gamma_1=0,\quad\delta_1=T_{\text{surf}}
+\end{equation}
+\end{subequations}
+
+
+The lower boundary condition is somewhat more complicated. Here we only look at the case when the temperature is below the pressure melting point of ice. BC for floating ice and temperatures at the pressure melting point of ice are trivial. The geothermal heat flux is applied at the lower boundary, i.e. Equation \eqref{temp.eq.d2} becomes
+\begin{equation}
+  \label{temp.eq.d2-lb}
+  \left.\frac{\pd T}{\pd\sigma}\right|_{\sigma_{k+1/2}}=-\frac{GH}k
+\end{equation}
+Assuming that $\sigma_k-\sigma_{k-1}=\sigma_{k+1}-\sigma_k=\Delta\sigma$ and inserting \eqref{temp.eq.d1} and \eqref{temp.eq.d2-lb} into \eqref{temp.eq.d3}, the second partial derivative becomes
+\begin{equation}
+  \left.\frac{\pd^2 T}{\pd\sigma^2}\right|_{\sigma_N} = \left(-\frac{GH}k-\frac{T_N-T_{N-1}}{\Delta\sigma}\right)/\Delta\sigma=-\frac{GH}{k\Delta\sigma}-\frac{T_N-T_{N-1}}{\Delta\sigma^2}
+\end{equation}
+Inserting the new conduction term and replacing the derivative of the vertical advection term with the Neuman boundary condition, Equation \eqref{temp.eq.temp3a} becomes
+\begin{subequations}
+  \begin{equation}
+    \frac{T_{N,t+1}-T_{N,t}}{\Delta t} = -a\left(\frac{GH}{k\Delta\sigma}+\frac{T_{N,t}-T_{N-1,t}}{\Delta\sigma^2}\right)+{b_1}_{N,t}+{b_2}_NT_{N,t}+\Phi_N-c_N\frac{GH}k
+  \end{equation}
+  and similarly for Equation \eqref{temp.eq.temp3b}
+  \begin{multline}
+    \frac{T_{N,t+1}-T_{N,t}}{\Delta t} = -a\left(\frac{GH}{k\Delta\sigma}+\frac{T_{N,t+1}-T_{N-1,t+1}}{\Delta\sigma^2}\right)+{b_1}_{N,t+1}+{b_2}_NT_{N,t+1}\\
+    +\Phi_N-c_N\frac{GH}k
+  \end{multline}
+\end{subequations}
+The elements of the tri--diagonal system at the lower boundary are then
+\begin{subequations}
+  \begin{gather}
+    \alpha_N =-\frac{a\Delta t}{2(\sigma_N-\sigma_{N-1})^2}\\
+    \beta_N = 1-\alpha_N+\frac12{b_2}_N\Delta t\\
+    \gamma_N = 0 \\
+    \begin{split}
+      \delta_N =&-\alpha_NT_{N-1,t}+(2-\beta_N)T_{N,t}-a\frac{GH\Delta t}{k(\sigma_N-\sigma_{N-1})}\\
+      &+\frac12({b_1}_{N,t}+{b_1}_{N,t+1})\Delta t+\Phi_N\Delta t-c_N\frac{GH\Delta t}k
+    \end{split}
+  \end{gather}
+\end{subequations}
+
