@@ -1,0 +1,9 @@
+\documentclass[12pt,english,a4paper]{article}
+\input{common/packages.tex}
+\usepackage{color}
+\usepackage[colorlinks=true,citecolor=blue,dvipdfm]{hyperref}
+\input{common/definitions.tex}
+\special{pdf: docinfo << /Author (Magnus Hagdorn and Ian Rutt) /Title (GLIMMER 0.7 Numerics) >>}
+
+
+\input{num.tex}
